Gnome 43: Fix double borders and black text in context menus

--- a/gtk-4.0/gtk.css
+++ b/gtk-4.0/gtk.css
@@ -2844,7 +2844,6 @@ menu, .menu, .context-menu {
   margin: 4px;
   padding: 2px 0px;
   background: #1c2529;
-  border: 1px solid #12171a;
   border-radius: 5px;
   font: initial; }
   .csd menu,
@@ -3235,7 +3234,8 @@ popover.background {
     background-color: #1c2529;
     background-clip: padding-box;
     border: 1px solid #12171a;
-    box-shadow: 0 4px 6px #12171a; }
+    box-shadow: 0 4px 6px #12171a;
+    color: #fefefe; }
   popover.background:backdrop {
     background-color: transparent;
     box-shadow: none; }
@@ -3296,6 +3296,7 @@ popover.menu {
         border-color: #2f3e44; }
   popover.menu > arrow, popover.menu.background > contents {
     background-color: #1c2529;
+    color: #fefefe;
     padding: 5px; }
   popover.menu.background separator {
     margin: 6px 0; }
